markdown added for instructions

--- a/scorm-builder/templates/topic-template.html
+++ b/scorm-builder/templates/topic-template.html
@@ -390,8 +390,9 @@
                                             <i class="fas fa-list-ol text-blue-500 mr-2"></i>
                                             Instructions
                                         </h5>
-                                        <div class="prose prose-lg max-w-none">
-                                            <p class="text-gray-700 leading-relaxed whitespace-pre-line">{{{instructions}}}</p>                                        </div>
+                                        <div class="prose prose-lg max-w-none text-gray-700 leading-relaxed">
+                                            {{{instructionsHtml}}}
+                                        </div>
                                     </div>
                                     
                                    <!-- Code Block (if present) -->
