Images removal option fixed in WebUI

--- a/scorm-builder/web-ui/views/index.ejs
+++ b/scorm-builder/web-ui/views/index.ejs
@@ -140,7 +140,7 @@
                             <p class="text-sm text-gray-600">Click to upload logo</p>
                         </button>
                         <div id="companyLogoPreview" class="hidden">
-                            <img class="h-12 w-auto rounded-lg shadow-sm" alt="Company Logo Preview">
+                            <!-- Preview will be inserted here -->
                         </div>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                             <p class="text-sm text-gray-600">Upload hero image</p>
                         </button>
                         <div id="heroImagePreview" class="hidden">
-                            <img class="h-24 w-auto rounded-lg shadow-sm" alt="Hero Image Preview">
+                            <!-- Preview will be inserted here -->
                         </div>
                     </div>
                     <input type="text" name="heroImageCaption" 
